--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -11,4 +11,5 @@ steps:
            '--image', 'gcr.io/$PROJECT_ID/streamlit-app',
            '--region', 'asia-south1',
            '--platform', 'managed',
-           '--allow-unauthenticated']
+           '--allow-unauthenticated',
+           '--port', '8501']
